tests/fixtures/failing/std_option_self_apply.wm
from "std/option" import { map, Some };

export let selfApply = () => {
  map(map, Some(1))
};
